--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 <body class="bg-gray-900 text-white flex items-center justify-center min-h-screen">
     <div class="bg-gray-800 p-6 rounded-lg shadow-lg max-w-md w-full relative">
-        <button id="testBeep" class="absolute top-4 right-4 text-blue-400 hover:text-blue-300 focus:outline-none" title="Test Beep Sound">
+        <button id="testBeep" class="absolute top-4 right-4 text-blue-400 hover:text-blue-300 focus:outline-none flex items-center gap-2" title="Play test beep">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.536 8.464a5 5 0 010 7.072m2.828-9.9a9 9 0 010 12.728M5.586 15H4a1 1 0 01-1-1v-4a1 1 0 011-1h1.586l4.707-4.707a1 1 0 011.414 0l.707.707a1 1 0 000 1.414L9.414 9H13a1 1 0 011 1v4a1 1 0 01-1 1H9.414l2.293 2.293a1 1 0 010 1.414l-.707.707a1 1 0 01-1.414 0L5.586 15z" />
             </svg>
+            <span class="text-sm">Test Beep</span>
         </button>
         <h1 class="text-2xl font-bold text-center mb-4">15-Minute Alarm</h1>
         <p class="text-center text-gray-300 mb-4">Beep 1 minute before each 15-minute mark, then every 2 seconds for the last 10 seconds.</p>
@@ -35,9 +36,15 @@
         // Create audio object for beep
         const beep = new Audio('https://www.soundjay.com/buttons/beep-01a.mp3');
 
+        // Ensure audio can play by preloading
+        beep.preload = 'auto';
+
         // Test beep button
         document.getElementById('testBeep').addEventListener('click', () => {
-            beep.play();
+            beep.play().catch(error => {
+                console.error('Audio play failed:', error);
+                alert('Unable to play sound. Ensure your browser allows audio or try refreshing.');
+            });
         });
 
         // Function to format time as 12-hour HH:MM:SS AM/PM
@@ -87,14 +94,14 @@
 
             // Check if it's 1 minute before the 15-minute mark (e.g., 14:00, 29:00, 44:00, 59:00)
             if ((minutes % 15 === 14 && seconds === 0)) {
-                beep.play();
+                beep.play().catch(error => console.error('Alarm play failed:', error));
             }
 
             // Check if it's within the last 10 seconds of the 15-minute mark (e.g., 14:50-14:59)
             if ((minutes % 15 === 14 && seconds >= 50)) {
                 // Play beep every 2 seconds (50, 52, 54, 56, 58)
                 if (seconds % 2 === 0) {
-                    beep.play();
+                    beep.play().catch(error => console.error('Alarm play failed:', error));
                 }
             }
         }
