--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         </button>
         <h1 class="text-2xl font-bold text-center mb-4">15-Minute Alarm</h1>
         <p class="text-center text-gray-300 mb-4">Beep 1 minute before each 15-minute mark, then every 2 seconds for the last 10 seconds.</p>
+        <p class="text-center text-gray-400 text-sm mb-4">Note: Click "Test Beep" or anywhere on the page to enable sound in some browsers.</p>
         <div class="grid grid-cols-2 gap-4">
             <div class="text-center">
                 <p class="text-lg font-semibold">Current Time</p>
@@ -33,18 +34,54 @@
     </div>
 
     <script>
-        // Create audio object for beep
-        const beep = new Audio('https://www.soundjay.com/buttons/beep-01a.mp3');
+        // Create AudioContext for synthetic beep
+        let audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+        let isAudioUnlocked = false;
 
-        // Ensure audio can play by preloading
-        beep.preload = 'auto';
+        // Function to resume AudioContext on user interaction
+        function unlockAudio() {
+            if (audioCtx.state === 'suspended' && !isAudioUnlocked) {
+                audioCtx.resume().then(() => {
+                    console.log('AudioContext resumed');
+                    isAudioUnlocked = true;
+                }).catch(error => {
+                    console.error('Error resuming AudioContext:', error);
+                });
+            }
+        }
+
+        // Add click listener to entire document for audio unlock
+        document.addEventListener('click', unlockAudio, { once: true });
+
+        // Function to generate a friendly synthetic beep (440Hz, 0.2s, sine wave)
+        function playBeep() {
+            if (!isAudioUnlocked) {
+                console.log('Audio not unlocked yet');
+                return;
+            }
+            try {
+                const oscillator = audioCtx.createOscillator();
+                const gainNode = audioCtx.createGain();
+
+                oscillator.type = 'sine'; // Soft, friendly tone
+                oscillator.frequency.setValueAtTime(440, audioCtx.currentTime); // A4 note
+                gainNode.gain.setValueAtTime(0.5, audioCtx.currentTime); // Moderate volume
+                gainNode.gain.exponentialRampToValueAtTime(0.01, audioCtx.currentTime + 0.2); // Fade out
+
+                oscillator.connect(gainNode);
+                gainNode.connect(audioCtx.destination);
+
+                oscillator.start();
+                oscillator.stop(audioCtx.currentTime + 0.2); // Beep duration: 0.2 seconds
+            } catch (error) {
+                console.error('Error playing beep:', error);
+            }
+        }
 
         // Test beep button
         document.getElementById('testBeep').addEventListener('click', () => {
-            beep.play().catch(error => {
-                console.error('Audio play failed:', error);
-                alert('Unable to play sound. Ensure your browser allows audio or try refreshing.');
-            });
+            unlockAudio();
+            playBeep();
         });
 
         // Function to format time as 12-hour HH:MM:SS AM/PM
@@ -88,20 +125,21 @@
 
         // Function to check if current time is within alarm conditions
         function checkAlarm() {
+            if (!isAudioUnlocked) return; // Skip if audio not unlocked
             const now = new Date();
             const minutes = now.getMinutes();
             const seconds = now.getSeconds();
 
             // Check if it's 1 minute before the 15-minute mark (e.g., 14:00, 29:00, 44:00, 59:00)
-            if ((minutes % 15 === 14 && seconds === 0)) {
-                beep.play().catch(error => console.error('Alarm play failed:', error));
+            if (minutes % 15 === 14 && seconds === 0) {
+                playBeep();
             }
 
             // Check if it's within the last 10 seconds of the 15-minute mark (e.g., 14:50-14:59)
-            if ((minutes % 15 === 14 && seconds >= 50)) {
+            if (minutes % 15 === 14 && seconds >= 50) {
                 // Play beep every 2 seconds (50, 52, 54, 56, 58)
                 if (seconds % 2 === 0) {
-                    beep.play().catch(error => console.error('Alarm play failed:', error));
+                    playBeep();
                 }
             }
         }
