--- a/index.html
+++ b/index.html
@@ -5,84 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>15-Minute Alarm</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        .glassmorphism {
+            background: rgba(255, 255, 255, 0.05);
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+        }
+        .hover-scale {
+            transition: transform 0.3s ease;
+        }
+        .hover-scale:hover {
+            transform: scale(1.05);
+        }
+    </style>
 </head>
-<body class="bg-gray-900 text-white flex items-center justify-center min-h-screen">
-    <div class="bg-gray-800 p-6 rounded-lg shadow-lg max-w-md w-full relative">
-        <button id="testBeep" class="absolute top-4 right-4 text-blue-400 hover:text-blue-300 focus:outline-none flex items-center gap-2" title="Play test beep">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.536 8.464a5 5 0 010 7.072m2.828-9.9a9 9 0 010 12.728M5.586 15H4a1 1 0 01-1-1v-4a1 1 0 011-1h1.586l4.707-4.707a1 1 0 011.414 0l.707.707a1 1 0 000 1.414L9.414 9H13a1 1 0 011 1v4a1 1 0 01-1 1H9.414l2.293 2.293a1 1 0 010 1.414l-.707.707a1 1 0 01-1.414 0L5.586 15z" />
-            </svg>
-            <span class="text-sm">Test Beep</span>
-        </button>
-        <h1 class="text-2xl font-bold text-center mb-4">15-Minute Alarm</h1>
-        <p class="text-center text-gray-300 mb-4">Beep 1 minute before each 15-minute mark, then every 2 seconds for the last 10 seconds.</p>
-        <p class="text-center text-gray-400 text-sm mb-4">Note: Click "Test Beep" or anywhere on the page to enable sound in some browsers.</p>
-        <div class="grid grid-cols-2 gap-4">
-            <div class="text-center">
-                <p class="text-lg font-semibold">Current Time</p>
-                <p id="currentTime" class="text-xl font-mono text-blue-400"></p>
+<body class="bg-gradient-to-br from-gray-900 to-gray-800 text-white flex items-center justify-center min-h-screen p-4">
+    <div class="glassmorphism p-8 rounded-2xl shadow-xl max-w-sm w-full hover-scale">
+        <h1 class="text-3xl font-extrabold text-center text-transparent bg-clip-text bg-gradient-to-r from-blue-400 to-purple-500 mb-4">15-Minute Alarm</h1>
+        <p class="text-center text-gray-400 text-sm mb-6">Soft beep 1 min before, then every 2s for the last 10s of each 15-min mark.</p>
+        <div class="space-y-6">
+            <div class="flex justify-between items-center bg-gray-900/50 rounded-lg p-4">
+                <p class="text-base font-medium">Current Time</p>
+                <p id="currentTime" class="text-lg font-mono text-blue-300"></p>
             </div>
-            <div class="text-center">
-                <p class="text-lg font-semibold">Next Alarm</p>
-                <p id="nextAlarm" class="text-xl font-mono text-blue-400"></p>
+            <div class="flex justify-between items-center bg-gray-900/50 rounded-lg p-4">
+                <p class="text-base font-medium">Next Alarm</p>
+                <p id="nextAlarm" class="text-lg font-mono text-blue-300"></p>
             </div>
-            <div class="text-center col-span-2">
-                <p class="text-lg font-semibold">Countdown</p>
-                <p id="countdown" class="text-2xl font-mono text-green-400"></p>
+            <div class="text-center bg-gray-900/50 rounded-lg p-4">
+                <p class="text-base font-medium">Countdown</p>
+                <p id="countdown" class="text-2xl font-mono text-green-400 animate-pulse"></p>
             </div>
         </div>
     </div>
 
     <script>
-        // Create AudioContext for synthetic beep
-        let audioCtx = new (window.AudioContext || window.webkitAudioContext)();
-        let isAudioUnlocked = false;
-
-        // Function to resume AudioContext on user interaction
-        function unlockAudio() {
-            if (audioCtx.state === 'suspended' && !isAudioUnlocked) {
-                audioCtx.resume().then(() => {
-                    console.log('AudioContext resumed');
-                    isAudioUnlocked = true;
-                }).catch(error => {
-                    console.error('Error resuming AudioContext:', error);
-                });
-            }
-        }
-
-        // Add click listener to entire document for audio unlock
-        document.addEventListener('click', unlockAudio, { once: true });
-
-        // Function to generate a friendly synthetic beep (440Hz, 0.2s, sine wave)
-        function playBeep() {
-            if (!isAudioUnlocked) {
-                console.log('Audio not unlocked yet');
-                return;
-            }
-            try {
-                const oscillator = audioCtx.createOscillator();
-                const gainNode = audioCtx.createGain();
-
-                oscillator.type = 'sine'; // Soft, friendly tone
-                oscillator.frequency.setValueAtTime(440, audioCtx.currentTime); // A4 note
-                gainNode.gain.setValueAtTime(0.5, audioCtx.currentTime); // Moderate volume
-                gainNode.gain.exponentialRampToValueAtTime(0.01, audioCtx.currentTime + 0.2); // Fade out
-
-                oscillator.connect(gainNode);
-                gainNode.connect(audioCtx.destination);
-
-                oscillator.start();
-                oscillator.stop(audioCtx.currentTime + 0.2); // Beep duration: 0.2 seconds
-            } catch (error) {
-                console.error('Error playing beep:', error);
-            }
-        }
-
-        // Test beep button
-        document.getElementById('testBeep').addEventListener('click', () => {
-            unlockAudio();
-            playBeep();
-        });
+        // Create audio objects for soft and regular beeps
+        const softBeep = new Audio('https://www.soundjay.com/buttons/beep-01a.mp3');
+        const regularBeep = new Audio('https://www.soundjay.com/buttons/beep-02.mp3');
 
         // Function to format time as 12-hour HH:MM:SS AM/PM
         function formatTime(date) {
@@ -125,21 +85,20 @@
 
         // Function to check if current time is within alarm conditions
         function checkAlarm() {
-            if (!isAudioUnlocked) return; // Skip if audio not unlocked
             const now = new Date();
             const minutes = now.getMinutes();
             const seconds = now.getSeconds();
 
             // Check if it's 1 minute before the 15-minute mark (e.g., 14:00, 29:00, 44:00, 59:00)
-            if (minutes % 15 === 14 && seconds === 0) {
-                playBeep();
+            if ((minutes % 15 === 14 && seconds === 0)) {
+                softBeep.play();
             }
 
             // Check if it's within the last 10 seconds of the 15-minute mark (e.g., 14:50-14:59)
-            if (minutes % 15 === 14 && seconds >= 50) {
+            if ((minutes % 15 === 14 && seconds >= 50)) {
                 // Play beep every 2 seconds (50, 52, 54, 56, 58)
                 if (seconds % 2 === 0) {
-                    playBeep();
+                    regularBeep.play();
                 }
             }
         }
